--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<title>welome</title>
+<title style="background-color:rgb(240, 97, 230);"> welome</title>
+<h1>About Me</h1>
+    <p>Hi! My name is Lillian and I am an incoming college freshman at UC Davis. I enjoy taking walks and going on roadtrips.</p>
