--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
 <title style="background-color:rgb(240, 97, 230);"> welome</title>
 <h1>About Me</h1>
-    <p>Hi! My name is Lillian and I am an incoming college freshman at UC Davis. I enjoy taking walks and going on roadtrips.</p>
+    <p>Hi! My name is Lillian and I am an incoming college freshman at UC Davis. I enjoy taking walks and going on roadtrips. I joined E1T1 to explore the technology field!
+    </p>
+    <img src="https://media.licdn.com/dms/image/C560BAQGIzyIVJtd6Ig/company-logo_200_200/0/1618248586647?e=2147483647&v=beta&t=dhUsR1HpI8_tr3lHoCeK2AelDthDgWrT9ydkGcCYGaQ" alt="each 1 teach 1 tech company">
+
+<h1>Important Info</h1>   
+<h2>below are my socials linked!</h2>
+<a href="https://www.linkedin.com/in/lillianch92/">link text</a>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/800px-LinkedIn_logo_initials.png" alt="linked in logo">
+<a href="lillianch92@gmail.com">link text</a>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/2560px-Gmail_icon_%282020%29.svg.png" alt="gmail logo">
