--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <h1>Important Info</h1>   
 <h2>below are my socials linked!</h2>
 <a href="https://www.linkedin.com/in/lillianch92/">link text</a>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/800px-LinkedIn_logo_initials.png" alt="linked in logo">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/800px-LinkedIn_logo_initials.png" alt="linked in logo" style="width:500px;height:600px;">
 <a href="lillianch92@gmail.com">link text</a>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/2560px-Gmail_icon_%282020%29.svg.png" alt="gmail logo">
