--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <h1>About Me</h1>
     <p>Hi! My name is Lillian and I am an incoming college freshman at UC Davis. I enjoy taking walks and going on roadtrips. I joined E1T1 to explore the technology field!
     </p>
-    <img src="https://media.licdn.com/dms/image/C560BAQGIzyIVJtd6Ig/company-logo_200_200/0/1618248586647?e=2147483647&v=beta&t=dhUsR1HpI8_tr3lHoCeK2AelDthDgWrT9ydkGcCYGaQ" alt="each 1 teach 1 tech company">
+    <img src="https://media.licdn.com/dms/image/C560BAQGIzyIVJtd6Ig/company-logo_200_200/0/1618248586647?e=2147483647&v=beta&t=dhUsR1HpI8_tr3lHoCeK2AelDthDgWrT9ydkGcCYGaQ" alt="each 1 teach 1 tech company" style="width:50px;height:60px; >
 
 <h1>Important Info</h1>   
 <h2>below are my socials linked!</h2>
 <a href="https://www.linkedin.com/in/lillianch92/">link text</a>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/800px-LinkedIn_logo_initials.png" alt="linked in logo" style="width:500px;height:600px;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/800px-LinkedIn_logo_initials.png" alt="linked in logo" style="width:50px;height:60px;">
 <a href="lillianch92@gmail.com">link text</a>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/2560px-Gmail_icon_%282020%29.svg.png" alt="gmail logo">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/2560px-Gmail_icon_%282020%29.svg.png" alt="gmail logo" style="width:50px;height:60px;">
